Mudanca na chamada dos elementos ( innerHTML por Helpers )

--- a/app/client/templates/layouts/navigation.html
+++ b/app/client/templates/layouts/navigation.html
@@ -1,9 +1,9 @@
 <template name="navigation">
   <ul id="main-navigation" class="side-nav">
     <li class="item-avatar">
-      <img src="images/avatar/avatar1.png" height="60" />
-      <strong class="truncate">Alexandre Garcia</strong>
-      <span class="truncate">alexandregarcia@gmail.com</span>
+      <img src="{{ avatar }}" height="60" />
+      <strong class="truncate">{{ userName }}</strong>
+      <span class="truncate">{{ email }}</span>
     </li>
     <li class="item-nav">
       <a class="link-nav modal-trigger" href="#modal-edit-profile">
