--- a/app/client/stylesheets/app.scss
+++ b/app/client/stylesheets/app.scss
@@ -1414,6 +1414,11 @@ html {
 .form-pattern  {
   .upload-image {
     padding:15px 0;background:#f8f8fc;width:100%;margin-bottom:15px;
+    img {
+      border-radius:50%;
+      -webkit-border-radius:50%;
+      -moz-border-radius:50%;
+    }
   }
   .title-form {
     margin:0 0.75rem;font-size:16px;display:table;float:left;margin-top:10px;
