--- a/app/client/templates/pages/home/pages/editProfile.html
+++ b/app/client/templates/pages/home/pages/editProfile.html
@@ -17,7 +17,7 @@
     <div class="form-pattern modal-content">
 
       <div class="upload-image center-align">
-        <img src="images/avatar/avatar1.png" width="80" />
+        <img src="{{ avatar }}" width="80" />
       </div>
 
       <div class="row">
