--- a/app/client/templates/pages/television/pages/program/program.html
+++ b/app/client/templates/pages/television/pages/program/program.html
@@ -10,7 +10,9 @@
         </a>
       </div>
 
-      <a href="#" class="title center-align"></a>
+      <a href="#" class="title center-align">
+        {{ programTitle }}
+      </a>
 
     </nav>
 
@@ -28,10 +30,19 @@
             </div>
             <div class="col s6">
               <small>HORÁRIO</small>
-              <strong class="truncate"><span id="programHoraInicial"></span> às <span id="programHoraFinal"></span></strong>
+              <strong class="truncate">
+                <span id="programHoraInicial">
+                  {{ programHourBegin }}
+                </span> às
+                <span id="programHoraFinal">
+                  {{ programHourEnd }}
+                </span>
+              </strong>
             </div>
           </div>
-          <p class="program-description"></p>
+          <p class="program-description">
+            {{ programDescription }}
+          </p>
         </div>
 
         <div class="tab-flow row">
@@ -76,12 +87,4 @@
 
   </div>
 
-</template>
-
-<template name="playTvLayout">
-{{#if playTvValidate}}
-  <div class="play-tv padding">
-    <iframe src="http://new.livestream.com/accounts/3332377/events/2958396/player?width=640&height=260&autoPlay=false&mute=false" width="100%" height="260" frameborder="0" scrolling="no"> </iframe>
-  </div>
-{{/if}}
 </template>
