--- a/admin/client/views/login/login.html
+++ b/admin/client/views/login/login.html
@@ -7,7 +7,7 @@
         <div class="logo-login">
 
 
-          <img src="images/logo-mn.png" width="392" />
+          <img src="/images/logo.png" width="392" />
 
 
         </div>
