--- a/app/client/stylesheets/app.scss
+++ b/app/client/stylesheets/app.scss
@@ -1723,3 +1723,11 @@ button.toast-close-button {
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=40);
   filter: alpha(opacity=40);
 }
+
+
+
+.modal-social {
+  a {
+    width:48%;margin:1%;border:1px solid #e5e5e5;padding:1%;text-align:center;height:28%;
+  }
+}
