--- a/app/client/templates/pages/television/pages/program/pages/share.html
+++ b/app/client/templates/pages/television/pages/program/pages/share.html
@@ -1,6 +1,6 @@
 <template name="share">
 
-  <section id="modal-share" class="modal">
+  <section id="modal-share" class="modal modal-social">
 
   <header class="modal-header">
     <a href="{{ pathFor 'television' }}" class="modal-action modal-header-left modal-close" id="btn-show-message">
@@ -12,7 +12,26 @@
   </header>
 
   <div class="modal-content">
-    <a href="#">Facebook</a>
+    <a href="#" class="item-box txt-facebook">
+      <i class="icon-facebook-rect"></i>
+        Facebook
+    </a>
+    <a href="#" class="item-box txt-facebook">
+      <i class="icon-googleplus-rect"></i>
+        Google +1
+    </a>
+    <a href="#" class="item-box txt-twitter">
+      <i class="icon-twitter-bird"></i>
+        Twitter
+    </a>
+    <a href="#" class="item-box txt-whatsapp">
+      <i class="icon-whatsapp"></i>
+        Whatsapp
+    </a>
+    <a href="#" class="item-box txt-instagram">
+      <i class="icon-instagramm"></i>
+        Instagram
+    </a>
   </div>
 
   </section>
