--- a/app/client/templates/layouts/navigation.html
+++ b/app/client/templates/layouts/navigation.html
@@ -2,7 +2,7 @@
   <ul id="main-navigation" class="side-nav">
     <li class="item-avatar">
       <img src="{{ avatar }}" height="60" />
-      <strong class="truncate">{{ userName }}</strong>
+      <strong class="truncate">{{ name }}</strong>
       <span class="truncate">{{ email }}</span>
     </li>
     <li class="item-nav">
