--- a/app/client/templates/pages/home/pages/editProfile.html
+++ b/app/client/templates/pages/home/pages/editProfile.html
@@ -25,12 +25,12 @@
         <strong class="title-form">Informações Básicas</strong>
 
         <div class="input-field col s12">
-          <input id="name" type="text">
+          <input id="name" type="text" value="{{ name }}">
           <label for="name" class="">Nome</label>
         </div>
 
         <div class="input-field col s12">
-          <input id="mail" type="text">
+          <input id="mail" type="text" value="{{ email }}">
           <label for="mail" class="">E-mail</label>
         </div>
 
