--- a/app/client/templates/pages/television/pages/program/pages/polls/activePoll.html
+++ b/app/client/templates/pages/television/pages/program/pages/polls/activePoll.html
@@ -1,32 +1,18 @@
 <template name="activePoll">
 
   <div class="polls-answers">
+    {{#each poll}}
+      <strong class="polls-question">
+        <img src="{{ img }}" height="40" />  {{ description }}
+      </strong>
+    {{/each}}
 
-    <strong class="polls-question">
-      Etiam sollicitudin tortor ligula, in rhoncus elit molestie non. Nulla fringilla et dui nec feugiat. Curabitur eget aliquet ipsum
-    </strong>
-
-    <div class="polls-answers-item">
-      <img src="/images/television/item-1.png" height="40" />
-      <input name="option0" type="checkbox" id="option0" />
-      <label for="option0">Opção 01</label>
-    </div>
-    <div class="polls-answers-item">
-      <img src="/images/television/item-1.png" height="40" />
-      <input name="option1" type="checkbox" id="option1" />
-      <label for="option1">Opção 02</label>
-    </div>
-    <div class="polls-answers-item">
-      <img src="/images/television/item-1.png" height="40" />
-      <input name="option2" type="checkbox" id="option2" />
-      <label for="option2">Opção 03</label>
-    </div>
-    <div class="polls-answers-item">
-      <img src="/images/television/item-1.png" height="40" />
-      <input name="option3" type="checkbox" id="option3" />
-      <label for="option3">Opção 04</label>
-    </div>
-
+    {{#each answers}}
+      <div class="polls-answers-item">
+        <input name="enquete" type="radio" id="{{ _id }}" value="{{ _id }}"/>
+        <label for="{{ _id }}">{{ description }}</label>
+      </div>
+    {{/each}}
     <div class="poll-answers-footer">
 
        <a class="btn" href="#">
