--- a/app/client/templates/pages/television/pages/program/pages/polls/resultsPoll.html
+++ b/app/client/templates/pages/television/pages/program/pages/polls/resultsPoll.html
@@ -1,28 +1,17 @@
 <template name="resultsPoll">
-
   <div class="polls-answers results-question hide">
+    {{#each poll}}
+      <strong class="polls-question">
+        <img src="{{ img }}" height="40" /> {{ description }}
+      </strong>
+    {{/each}}
 
-    <div class="polls-answers-item vote">
-      <strong>40%</strong>
-      <img src="/images/television/item-1.png" height="40" />
-      <span>Opção 01</span>
+    {{#each answersResult}}
+    <div class="polls-answers-item {{ voto }}">
+      <strong>{{porcent}}%</strong>
+      <span>{{description}}</span>
     </div>
-    <div class="polls-answers-item">
-      <strong>20%</strong>
-      <img src="/images/television/item-1.png" height="40" />
-      <span>Opção 02</span>
-    </div>
-    <div class="polls-answers-item">
-      <strong>20%</strong>
-      <img src="/images/television/item-1.png" height="40" />
-      <span>Opção 03</span>
-    </div>
-    <div class="polls-answers-item">
-      <strong>20%</strong>
-      <img src="/images/television/item-1.png" height="40" />
-      <span>Opção 04</span>
-    </div>
-
+    {{/each}}
   </div>
 
 </template>
