Problema com a enquete resolvido ( tudo dentro de program.js )

--- a/app/client/stylesheets/app.scss
+++ b/app/client/stylesheets/app.scss
@@ -1731,3 +1731,9 @@ button.toast-close-button {
     width:48%;margin:1%;border:1px solid #e5e5e5;padding:1%;text-align:center;height:28%;
   }
 }
+
+
+
+.camera-popup {
+  margin-left:-160px!important;
+}
