--- a/app/client/templates/pages/television/pages/program/components/message/addImage.html
+++ b/app/client/templates/pages/television/pages/program/components/message/addImage.html
@@ -2,9 +2,9 @@
 
   <div class="add-image">
 
-    <strong id="btn-close-add-image">
+    <a href="#" id="btn-close-add-image">
       <img src="/images/television/icons/icon-close.svg" height="20" />
-    </strong>
+    </a>
 
     <div class="buttons-insert">
 
