--- a/app/client/templates/pages/television/pages/program/components/message/addVideo.html
+++ b/app/client/templates/pages/television/pages/program/components/message/addVideo.html
@@ -2,9 +2,9 @@
 
   <div class="add-video">
 
-    <strong id="btn-close-add-video">
+    <a href="#" id="btn-close-add-video">
       <img src="/images/television/icons/icon-close.svg" height="20" />
-    </strong>
+    </a>
 
     <div class="buttons-insert">
 
