--- a/app/client/templates/pages/television/pages/program/pages/polls/resultsPoll.html
+++ b/app/client/templates/pages/television/pages/program/pages/polls/resultsPoll.html
@@ -1,6 +1,6 @@
 <template name="resultsPoll">
   <div class="polls-answers results-question hide">
-    {{#each poll}}
+    {{#each pollResult}}
       <strong class="polls-question">
         <img src="{{ img }}" height="40" /> {{ description }}
       </strong>
