--- a/admin/client/views/users/update.html
+++ b/admin/client/views/users/update.html
@@ -60,7 +60,7 @@
 					        <input type="file" id="avatar_upload" name="imageFile" />
 					  	</div>
 				  		<div class="img-upload">
-				      		<img src="{{imgBase64_avatar}}" id="avatar_imgBase64" width="45" height="45">
+				      		<img src="#" id="avatar_imgBase64" width="45" height="45">
 				        </div>
 				  	</div>
 			      </div>
