--- a/admin/client/views/users/user.html
+++ b/admin/client/views/users/user.html
@@ -17,19 +17,19 @@
 	<div class="content-container row">
 
 		<div class="poll userNew">
-		
+
 			<div class="col s12">
 
 				<div class="collection">
 					{{#each users}}
 					<div class="collection-item avatar">
-					
+
 					  <div class="item-inner collapsible-header">
-					  		<img src="{{picture}}" width="42" height="42" />
+					  		<img src="{{avatar}}" width="42" height="42" />
 							<strong class="title">{{name}}</strong>
 							<p class="date">Email: {{email}} <br /> Nível: {{level}}</p>
 							<div class="secondary-content actions-icons">
-						  	
+
 						  	<a href="{{pathFor 'userUpdate' _id=this._id}}">
 						  		<i class="mdi-image-edit"></i>
 						  	</a>
@@ -41,7 +41,7 @@
 						  </div>
 
 					  </div>
-					
+
 					</div>
 					{{/each }}
 
@@ -52,7 +52,7 @@
 			</div>
 
 		</div>
-	
+
 	</div>
 {{else}}
 Usuário sem permissão
