--- a/admin/client/views/users/new.html
+++ b/admin/client/views/users/new.html
@@ -65,7 +65,10 @@
 				        </div>
 				  	</div>
 			     </div>
-
+		      	<div class="input-field col s12">
+					<input id="user_status" type="checkbox" class="validate">
+					<label for="user_status">Ativar</label>
+				</div>
 			<!-- 	<div class="input-field col s12">
 					<input id="user_block_all_notify" type="checkbox" class="validate">
 					<label for="user_block_all_notify">Quero receber notificações?</label>
