--- a/app/client/templates/pages/authentication/authentication.html
+++ b/app/client/templates/pages/authentication/authentication.html
@@ -10,7 +10,7 @@
       {{> loginFacebook}}
       {{> loginGoogle}}
 
-      {{> loginButtons}}
+      <div class="meteor-connect">{{> loginButtons}}</div>
     </div>
 
   </div>
