Estilo portal meionorte.com

--- a/app/client/stylesheets/app.scss
+++ b/app/client/stylesheets/app.scss
@@ -1458,7 +1458,7 @@ html {
 .message-feedback {
   width:100%;margin-top:60px;
 
-  strong {display:block;width:100%;font-size:18px;color:#666;}
+  strong {display:block;width:100%;font-size:18px;color:#999;}
   span {padding:0 40px;color:#ccc;display:table;font-size:14px;line-height:20px;}
 
   .btn {
@@ -1727,7 +1727,7 @@ button.toast-close-button {
 
 
 .modal-social {
-  a {
+  .item-box {
     width:48%;margin:1%;border:1px solid #e5e5e5;padding:1%;text-align:center;height:28%;
   }
 }
