--- a/app/client/templates/pages/newspaper/layouts/navTabsNewspaper.html
+++ b/app/client/templates/pages/newspaper/layouts/navTabsNewspaper.html
@@ -1,6 +1,6 @@
-<template name="navigationTabs">
+<template name="navTabsNewspaper">
 
-    <div class="newspaper-tabs-bottom">
+    <div id="nav-tabs-newspaper" class="newspaper-tabs-bottom">
 
       <ul class="tabs-items">
 
