--- a/app/client/templates/pages/radio/boafm/boafm.scss
+++ b/app/client/templates/pages/radio/boafm/boafm.scss
@@ -1,4 +1,5 @@
 .boafm-page {
+  font-family:'Roboto', Helvetica Neue, Helvetica, sans-serif;
   .header {
     background:#566CA0!important;color:#fff;
     .logo, .title {
