--- a/app/client/templates/pages/television/pages/program/components/message/addMessage.html
+++ b/app/client/templates/pages/television/pages/program/components/message/addMessage.html
@@ -1,4 +1,4 @@
-<template name="addMessage">
+<template name="addMessageTelevision">
 
   <div id="message-program" class="message">
 
@@ -21,13 +21,13 @@
       <img src="/images/television/icons/icon-send-active.svg" height="20" />
     </button>
 
-    {{> addImage }}
-    {{> addVideo }}
+    {{> addImageTelevision }}
+    {{> addVideoTelevision }}
 
     </form>
 
   </div>
 
-  {{> fileMessage }}
+  {{> fileMessageTelevision }}
 
 </template>
