--- a/app/client/templates/pages/television/pages/program/components/message/fileMessage.html
+++ b/app/client/templates/pages/television/pages/program/components/message/fileMessage.html
@@ -1,4 +1,4 @@
-<template name="fileMessage">
+<template name="fileMessageTelevision">
   <div id="file-message-television" class="file-message">
     <strong id="btn-cancel-file">
       <img src="/images/television/icons/icon-close-white.svg" height="20" />
