--- a/app/client/templates/pages/television/television.scss
+++ b/app/client/templates/pages/television/television.scss
@@ -1,6 +1,13 @@
 // Cor primária #798B91;
 
 .television-page {
+
+  font-family:'Roboto', Helvetica Neue, Helvetica, sans-serif;
+
+  // .has-header, .tab-flow {
+  //   height:100%;
+  // }
+
   .header {
     background:#798B91!important;color:#fff;
     .logo, .title {
