--- a/app/client/templates/pages/home/pages/editProfile.html
+++ b/app/client/templates/pages/home/pages/editProfile.html
@@ -9,10 +9,7 @@
       <h4 class="modal-title">
         Editar perfil
       </h4>
-
-      <a id="button-change-photo" href="#" class="change-image right">
-        <img src="images/home/icons/icon-upload-image.svg" height="28" />
-      </a>
+      
     </header>
     <div class="form-pattern modal-content">
 
@@ -26,15 +23,15 @@
 
         <div class="input-field col s12">
           <input id="name" type="text" value="{{ name }}">
-          <label for="name" class="">Nome</label>
+          <label for="name" class="active">Nome</label>
         </div>
 
         <div class="input-field col s12">
           <input id="mail" type="text" value="{{ email }}">
-          <label for="mail" class="">E-mail</label>
+          <label for="mail" class="active">E-mail</label>
         </div>
 
-        <div class="input-field col s12">
+        <!-- <div class="input-field col s12">
           <input id="phone" type="text">
           <label for="phone" class="">Telefone</label>
         </div>
@@ -116,7 +113,7 @@
             </div>
           </div>
 
-        </div>
+        </div> -->
 
       </div>
 
