--- a/app/client/templates/pages/television/pages/program/pages/timeline/timeline.html
+++ b/app/client/templates/pages/television/pages/program/pages/timeline/timeline.html
@@ -1,40 +1,44 @@
 <template name="timeline">
-{{#each contents}}
-  <div class="message-item">
 
-  <figure class="left">
-    <a href="#">
-      <img src="{{user_avatar}}" width="65" height="65" />
-    </a>
-  </figure>
+  {{#each contents}}
+    <div class="message-item">
 
-  <div class="message-info">
-    <h4 class="message-author">
+    <figure class="left">
       <a href="#">
-        {{user_name}}
+        <img src="{{user_avatar}}" width="65" height="65" />
       </a>
-    </h4>
-    <div class="message-date">
-      <img src="/images/television/icons/icon-clock.svg" height="14" />
-      <span>{{msg_time}}</span>
+    </figure>
+
+    <div class="message-info">
+      <h4 class="message-author">
+        <a href="#">
+          {{user_name}}
+        </a>
+      </h4>
+      <div class="message-date">
+        <img src="/images/television/icons/icon-clock.svg" height="14" />
+        <span>{{msg_time}}</span>
+      </div>
     </div>
+
+
+    <div class="message-content">
+      <p>
+        {{text}}
+      </p>
+      {{#if img}}
+      <a href="#">
+        <img src="{{img}}" width="65" height="65" />
+      </a>
+      {{/if}}
+    </div>
+
   </div>
-
-
-  <div class="message-content">
-    <p>
-      {{text}}
-    </p>
-    {{#if img}}
-    <a href="#">
-      <img src="{{img}}" width="65" height="65" />
-    </a>
-    {{/if}}
-  </div>
-
-</div>
-{{/each }}
+  {{/each }}
   <a id="mais" class="waves-effect waves-light btn btn-more color-pattern" style="{{mais}}">
     Carregar mais
   </a>
+
+  {{> notFoundTimeline }}
+
 </template>
