--- a/app/client/templates/pages/radio/boafm/boafm.html
+++ b/app/client/templates/pages/radio/boafm/boafm.html
@@ -1,7 +1,7 @@
 <template name="boafm">
 
   <div class="boafm-page transitions-content" style="height:100%;">
-
+{{#each programs}}
     {{> yield "header" }}
 
     <main class="content has-header">
@@ -45,8 +45,8 @@
         </div>
 
     </main>
-
-    {{> shareBOAFM }}
+{{/each}}
+    {{> share }}
 
   </div>
 
