--- a/app/client/templates/pages/radio/layouts/headerBOAFM.html
+++ b/app/client/templates/pages/radio/layouts/headerBOAFM.html
@@ -13,7 +13,20 @@
   </a>
 
   <div class="side-right">
-    aa
+
+      <div class="player">
+        <a href="" title="" class="player-button">
+          <i class="icon-play"></i>
+          <i class="icon-stop hide"></i>
+        </a>
+      </div>
+
+      <div class="music">
+        <a href="#" title="" class="music-button">
+          PEDIR MÚSICA
+        </a>
+      </div>
+
   </div>
 
 </nav>
