--- a/app/client/templates/pages/radio/fmmn/fmmn.html
+++ b/app/client/templates/pages/radio/fmmn/fmmn.html
@@ -10,35 +10,35 @@
 
           <div class="tab-flow row">
 
-            <div class="tab-header">
-              <ul class="tabs">
+          <div class="tab-header">
+            <ul class="tabs tabsTV">
 
-                <li class="tab" id="btn-show-message">
-                  <a class="active" href="#tab1">Timeline</a>
-                </li>
-                <li class="tab" id="btn-hide-message">
-                  <a href="#tab2">Enquete</a>
-                </li>
+              <li class="tab" id="btn-show-message">
+                <a class="active" href="#tab-timeline-tv">Timeline</a>
+              </li>
+              <li class="tab" id="btn-hide-message">
+                <a href="#tab-polls-tv">Enquete</a>
+              </li>
 
-              </ul>
+            </ul>
+          </div>
+
+          <div class="tab-container">
+            <div id="tab-timeline-tv" class="tab-content">
+
+              <section class="timeline-content">
+                {{> timeline }}
+              </section>
+
             </div>
+            <div id="tab-polls-tv" class="tab-content">
 
-            <div class="tab-container">
-              <div id="tab1" class="tab-content">
+              <section class="polls-content">
+                {{> polls }}
+              </section>
 
-                <section class="timeline-content">
-                  {{> timeline }}
-                </section>
-
-              </div>
-              <div id="tab2" class="tab-content">
-
-                <section class="polls-content">
-                  {{> polls }}
-                </section>
-
-              </div>
             </div>
+          </div>
 
           </div>
 
