--- a/app/client/templates/pages/portal/pages/blogs/pages/blog/post/layouts/headerCityPost.html
+++ b/app/client/templates/pages/portal/pages/blogs/pages/blog/post/layouts/headerCityPost.html
@@ -2,7 +2,7 @@
 
   <nav class="header header-portal">
 
-    <div class="nav-wrapper">
+    <div class="nav-wrapper bg-blogs">
 
       <div class="side-left">
         <a class="button btn-flat button-collapse" href="{{ pathFor 'portal' }}">
