--- a/app/client/templates/pages/portal/pages/city/layouts/headerCity.html
+++ b/app/client/templates/pages/portal/pages/city/layouts/headerCity.html
@@ -2,7 +2,7 @@
 
   <nav class="header header-portal">
 
-    <div class="nav-wrapper">
+    <div class="nav-wrapper bg-cidades">
 
       <div class="side-left">
         <a class="button btn-flat button-collapse" href="{{ pathFor 'portal' }}">
