--- a/app/client/templates/pages/portal/pages/index/contentPortalIndex.html
+++ b/app/client/templates/pages/portal/pages/index/contentPortalIndex.html
@@ -1,240 +1,35 @@
 <template name="contentPortalIndex">
 
-<div class="portalFeatured">
-
-  <div class="manchete post-model">
-
-    <h2 class="post-title">
-      <a href="#" class="txt-policia">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
-    </h2>
-
-  </div>
-
-
-  <section class="slider-main">
+  {{> homeFeatured }}
 
-    <div class="inner-slider">
-
-      <figure class="image-main">
-        <a href="#">
-          <img src="/images/portal/img-destaque3.png" width="100%" />
-        </a>
-      </figure>
+  {{> boxVideos }}
 
-      <div class="info-main">
-        <span class="label-main">
-          OPERAÇÃO INTEGRADA
-        </span>
-        <h2 class="title-main">
-          <a href="#">
-            Polícia prende acusados de tráfico e roubos no sul do Piauí
-          </a>
-        </h2>
-      </div>
+  {{> boxPolicia }}
 
-    </div>
-    <div class="inner-slider">
+  {{> boxEntretenimento }}
 
-      <figure class="image-main">
-        <a href="#">
-          <img src="/images/portal/img-destaque2.png" width="100%" />
-        </a>
-      </figure>
+  {{> boxPolitica }}
 
-      <div class="info-main">
-        <span class="label-main">
-          OPERAÇÃO INTEGRADA
-        </span>
-        <h2 class="title-main">
-          <a href="#">
-            Polícia prende acusados de tráfico e roubos no sul do Piauí
-          </a>
-        </h2>
-      </div>
+  {{> boxNoticias }}
 
-    </div>
+  {{> boxTecnologia }}
 
-    <div class="inner-slider">
+  {{> boxBlogs }}
 
-      <figure class="image-main">
-        <a href="#">
-          <img src="/images/portal/img-destaque.png" width="100%" />
-        </a>
-      </figure>
+  {{> boxEsportes }}
 
-      <div class="info-main">
-        <span class="label-main">
-          OPERAÇÃO INTEGRADA
-        </span>
-        <h2 class="title-main">
-          <a href="#">
-            Polícia prende acusados de tráfico e roubos no sul do Piauí
-          </a>
-        </h2>
-      </div>
+  {{> boxEducacao }}
 
-    </div>
+  {{> boxCidades }}
 
-    <div class="inner-slider">
+  {{> boxSaude }}
 
-      <figure class="image-main">
-        <a href="#">
-          <img src="/images/portal/img-destaque2.png" width="100%" />
-        </a>
-      </figure>
+  {{> boxCultura }}
 
-      <div class="info-main">
-        <span class="label-main">
-          OPERAÇÃO INTEGRADA
-        </span>
-        <h2 class="title-main">
-          <a href="#">
-            Polícia prende acusados de tráfico e roubos no sul do Piauí
-          </a>
-        </h2>
-      </div>
+  {{> boxEconomia }}
 
-    </div>
 
 
-  </section>
-
-  <div class="main-list">
-
-    <div class="post-model large">
-
-      <h2 class="post-title">
-        <a href="#">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
-      </h2>
-
-    </div>
-
-    <div class="post-model">
-
-      <h2 class="post-title">
-        <a href="#" class="txt-esportes">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
-      </h2>
-
-    </div>
-
-    <div class="post-model">
-
-      <h2 class="post-title">
-        <a href="#" class="txt-entretenimento">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
-      </h2>
-
-    </div>
-
-    <div class="post-model">
-
-      <h2 class="post-title">
-        <a href="#" class="txt-politica">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
-      </h2>
-
-    </div>
-
-    <div class="post-model full-post">
-
-      <figure class="post-image">
-        <img src="/images/portal/img-post1.png" width="100%" height="145" />
-      </figure>
-
-      <span class="post-label">ETIQUETA</span>
-
-      <h2 class="post-title">
-        <a href="#" class="txt-esportes">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
-      </h2>
-
-    </div>
-
-    <div class="post-model full-post">
-
-      <figure class="post-image">
-        <img src="/images/portal/img-post1.png" width="100%" height="145" />
-      </figure>
-
-      <span class="post-label">ETIQUETA</span>
-
-      <h2 class="post-title">
-        <a href="#" class="txt-cidades">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
-      </h2>
-
-    </div>
-
-    <div class="post-model full-post">
-
-      <figure class="post-image">
-        <img src="/images/portal/img-post1.png" width="100%" height="145" />
-      </figure>
-
-      <span class="post-label">ETIQUETA</span>
-
-      <h2 class="post-title">
-        <a href="#" class="txt-policia">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
-      </h2>
-
-    </div>
-
-    <div class="post-model full-post">
-
-      <figure class="post-image">
-        <img src="/images/portal/img-post1.png" width="100%" height="145" />
-      </figure>
-
-      <span class="post-label">ETIQUETA</span>
-
-      <h2 class="post-title">
-        <a href="#" class="txt-saude">Equipe da prefeitura é assaltada em evento de ciclismo em Teresina</a>
-      </h2>
-
-    </div>
-
-
-
-  </div>
-
-  </div>
-
-  <section class="box-model border-pattern">
-    <header class="box-model-header">
-      <h2 class="box-model-title">
-        <a href="#">
-          VÍDEOS
-        </a>
-      </h2>
-    </header>
-  </section>
-
-
-  <section class="box-model border-noticias">
-    <header class="box-model-header">
-      <h2 class="box-model-title">
-        <a href="#">
-          NOTÍCIAS
-        </a>
-      </h2>
-    </header>
-  </section>
-
-  <section class="box-model border-entretenimento">
-    <header class="box-model-header">
-      <h2 class="box-model-title">
-        <a href="#">
-          ENTRETENIMENTO
-        </a>
-      </h2>
-    </header>
-  </section>
-
-  <section class="box-model border-esportes">
-    <header class="box-model-header">
-      <h2 class="box-model-title">
-        <a href="#">
-          ESPORTES
-        </a>
-      </h2>
-    </header>
-  </section>
 
 </template>
 
