--- a/app/client/templates/pages/portal/portal.scss
+++ b/app/client/templates/pages/portal/portal.scss
@@ -54,7 +54,7 @@ $color-whatsapp:#4dc247!important;
     .button-search {
       img {margin:4px 0!important;}
     }
-    .nav-wrapper {z-index:8;height:46px;background:#03A9F4!important;}
+    .nav-wrapper {z-index:8;height:46px;background:#03A9F4;}
     .title {
       font-family:'Roboto', Helvetica Neue, Helvetica, sans-serif;color:#fff;line-height:48px!important;font-weight:bold!important;font-size:22px;
     }
@@ -156,7 +156,7 @@ $color-whatsapp:#4dc247!important;
 
       a {
         &:after {
-          width:100%;height:100%;left:0;bottom:0;position:absolute;content:"";
+          width:100%;height:100%;left:0;bottom:0;position:absolute;content:"";z-index:2;
 
           background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%);
           background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65)));
@@ -192,13 +192,13 @@ $color-whatsapp:#4dc247!important;
           color:#fff;
           text-align:center;
 
-          text-shadow: 0 0 3px #000;
+          text-shadow: 1px 1px 1px #000;
         }
       }
       .label-main {
         color:#fff;font-size:12px;line-height:16px;width:100%;text-align:center;display:table;
 
-        text-shadow: 0 0 3px #000;
+        text-shadow: 1px 1px 1px #000;
       }
 
       .info-main-bottom {
@@ -311,9 +311,40 @@ top: 0;
 
 
   .box-model {
-    width:100%;clear:both;display:table;margin:30px 0;border-top:2px solid #e5e5e5;
+    position:relative;width:100%;clear:both;display:table;padding:0 0 30px 0;border-top:2px solid #e5e5e5;
     .box-model-header {
       position:relative;height:52px;line-height:52px;text-align:center;border-bottom:1px solid #e5e5e5;
+
+      .box-model-header-left {
+        position:absolute;left:0;top:0;height:52px;height:52px;width:52px;
+        .button-nav-box-model {
+          background: none;
+          border: 0 none;
+          height: 48px;
+          padding: 0 10px;
+
+          border-radius:0!important;
+
+          i {
+            font-size:20px;
+          }
+        }
+      }
+      .box-model-header-right {
+        position:absolute;right:0;top:0;height:52px;height:52px;width:52px;
+        .button-search-box-model {
+          background: none;
+          border: 0 none;
+          height: 48px;
+          padding: 0 10px;
+
+          border-radius:0!important;
+
+          i {
+            font-size:20px;
+          }
+        }
+      }
       .box-model-title {
         line-height:0!important;margin:0!important;
         a {
@@ -321,9 +352,127 @@ top: 0;
         }
       }
     }
+    .box-model-content {
+      padding:10px;
+      .post-model {
+        padding:15px 0!important;
+      }
+    }
+
+    .nav-box-model {
+      position:absolute;left:-300px;top:0;width:280px;height:100%;background:#fff;z-index:4;
+
+      transition:left .4s ease-in-out;
+     -webkit-transition:left .4s ease-in-out;
+     -moz-transition:left .4s ease-in-out;
+
+      .header-nav {
+        height:52px;border-bottom:1px solid #e5e5e5;position:relative;
+        .title-header-nav {
+          line-height: 52px;
+          margin: 0;
+          color: #212121;
+          padding: 0 20px;
+          font-size: 22px;
+        }
+        .button-close {
+          position: absolute;
+          right: -15px;
+          top: -10px;
+          background: #000;
+          color: #fff;
+          border-radius: 50%;
+          box-shadow: 0 0 10px -3px rgba(0, 0, 0, 0.2);
+          height: 30px;
+          line-height: 22px;
+          width: 32px;
+          border: 0 none;
+          text-align: center;
+        }
+      }
+
+      .no-style {
+        list-style: none;
+        li {
+          width:100%;padding:0;border-bottom:1px solid #e5e5e5;height:42px;line-height:42px;
+          a {
+            color:#666;padding:0;display:block;padding:0 20px;
+          }
+        }
+      }
+    }
+
+
   }
 
 
+  #box-videos {
+    background:url('/images/portal/bg-midias.jpg') no-repeat;color:#fff;
+    background-size:cover;
+    .box-model-header {
+      border-bottom:0 none!important;
+      .box-model-title {
+        a{color:#fff!important;}
+      }
+    }
+    .midias-featured {
+      position:relative;padding:0!important;
+      .post-image {
+        max-width:100%!important;width:100%;margin:0!important;
+        img {
+          max-height:240px;
+        }
+        &:after {
+          width:100%;height:150px;left:0;bottom:6px;position:absolute;content:"";z-index:4;
+
+          background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%);
+          background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65)));
+          background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+          background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+          background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+          background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
+
+          border-radius:5px;
+
+        }
+        .icon-play {
+          padding: 12px;
+          border: 2px solid #fff;
+          position: absolute;
+          left: 50%;
+          margin-left: -28px;
+          top: 50%;
+          font-size: 20px;
+          border-radius: 50%;
+          margin-top: -50px;
+        }
+      }
+      .post-info {
+        position:absolute;left:0;bottom:0;width:100%;padding:10px;z-index:8;
+
+        .post-label {
+          color:#fff;font-size:14px;text-shadow:1px 1px 1px #000;
+        }
+        .post-title {
+          max-height:78px!important;
+          a {
+            color:#fff;font-size:22px;line-height:26px;text-shadow:1px 1px 1px #000;
+          }
+        }
+      }
+    }
+    .post-list {
+      .post-model {
+        padding:15px 0!important;
+        .post-title {
+          a {
+            color:#fff!important;
+          }
+        }
+      }
+    }
+  }
 
   .txt-pattern, .txt-search {color:$color-pattern;}
   .txt-noticias {color:$color-noticias;}
@@ -536,5 +685,37 @@ top: 0;
     -webkit-perspective:none!important;
     -moz-perspective: none!important;
     perspective: none!important;
+  }
+}
+
+
+
+.show-nav-entretenimento {
+  #nav-entretenimento {
+    left:0;
+  }
+}
+
+.show-nav-esportes {
+  #nav-esportes {
+    left:0;
+  }
+}
+
+.show-nav-noticias {
+  #nav-noticias {
+    left:0;
+  }
+}
+
+.show-nav-blogs {
+  #nav-blogs {
+    left:0;
+  }
+}
+
+.show-nav-cidades {
+  #nav-cidades {
+    left:0;
   }
 }
