Tamanho das imagens Programas

--- a/app/client/templates/pages/television/pages/program/pages/timeline/notFoundTimeline.html
+++ b/app/client/templates/pages/television/pages/program/pages/timeline/notFoundTimeline.html
@@ -1,6 +1,6 @@
 <template name="notFoundTimeline">
 
-  <div class="message-feedback center-align hide">
+  <div class="message-feedback center-align">
 
     <img src="/images/television/icons/icon-activities.svg"  height="95" />
 
