--- a/admin/client/views/vehicle/vehicle.html
+++ b/admin/client/views/vehicle/vehicle.html
@@ -16,7 +16,7 @@
 
 	<div class="content-container row">
 
-		<div class="vehicle">
+		<div class="vehicle programs">
 
 			<div class="col s12 no-padding">
 			    {{#each vehicle}}
@@ -38,7 +38,8 @@
 
 				            </div>
 				            <div class="card-content">
-				              	<b>{{name}} - {{status}}</b>
+				              	<strong>{{name}}</strong>
+                        <span>{{status}}</span>
 				            </div>
 			            </div>
 
