--- a/admin/client/views/vehicle/new.html
+++ b/admin/client/views/vehicle/new.html
@@ -34,35 +34,29 @@
 			        <label for="vehicle_description">Descrição</label>
 			      </div>
 
-  			      <div class="input-field col s12">
-			        <i class="mdi-editor-mode-edit prefix"></i>
-			        <input id="vehicle_feedurl" type="text" class="validate">
-			        <label for="vehicle_feedurl">FEED URL</label>
-			      </div>
-
-			       <div class="col s6">
-			       	<small>Imagem ( 300x300 ) *</small>
+			       <div class="col file s12">
+			       	<small>Dimensões ( 300x300 ) *</small>
 		      		<div class="file-field input-field">
-						<input class="file-path validate hide" type="text"/>
-						<div class="btn color-pattern btn-submit-white">
-					        <span>Avatar</span>
-					        <input type="file" id="avatar_upload" name="imageFile" />
-					  	</div>
-				  		<div class="img-upload">
-				      		<img src="{{imgBase64_avatar}}" id="avatar_imgBase64" width="45" height="45">
-				        </div>
-				  	</div>
+    						<input class="file-path validate hide" type="text"/>
+    						<div class="btn color-pattern btn-submit-white">
+    					        <span>Perfil</span>
+    					        <input type="file" id="avatar_upload" name="imageFile" />
+    					  	</div>
+    				  		<div class="img-upload">
+    				      		<img src="{{imgBase64_avatar}}" id="avatar_imgBase64" width="45" height="45">
+    				        </div>
+    				  </div>
 			      </div>
 
   		      	<div class="input-field col s12">
-					<input id="vehicle_status" type="checkbox" class="validate">
-					<label for="vehicle_status">Ativar</label>
-				</div>
+      					<input id="vehicle_status" type="checkbox" class="validate">
+      					<label for="vehicle_status">Status</label>
+      				</div>
 
-			      <div class="btn-new col s12">
-			      	<button type="submit" class="waves-effect waves-light btn btn-submit pull-right" style="width:100%;">
-						Criar
-					</button>
+    			      <div class="btn-new col s12">
+    			      	<button type="submit" class="waves-effect waves-light btn btn-submit pull-right" style="width:100%;">
+    						Criar
+    					</button>
 			      </div>
 
 			  </form>
