--- a/admin/client/views/vehicle/update.html
+++ b/admin/client/views/vehicle/update.html
@@ -34,18 +34,12 @@
 			        <label for="vehicle_description" id="vehicle_label_description">Descrição</label>
 			      </div>
 
-  			      <div class="input-field col s12">
-			        <i class="mdi-editor-mode-edit prefix" id="vehicle_img_feedurl"></i>
-			        <input id="vehicle_feedurl" type="text" class="validate">
-			        <label for="vehicle_feedurl" id="vehicle_label_feedurl">FEED URL</label>
-			      </div>
-
-			       <div class="col s6">
-			       	<small>Imagem ( 300x300 ) *</small>
+			       <div class="col file s6">
+			       	<small>Dimensões ( 300x300 ) *</small>
 		      		<div class="file-field input-field">
 						<input class="file-path validate hide" type="text"/>
 						<div class="btn color-pattern btn-submit-white">
-					        <span>Avatar</span>
+					        <span>Perfil</span>
 					        <input type="file" id="avatar_upload" name="imageFile" />
 					  	</div>
 				  		<div class="img-upload">
